--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,8 @@ COPY package.json tsconfig.json vite.config.ts ./
 RUN npm install
 COPY public ./public
 COPY src ./src
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 RUN npm run build
 
 FROM nginx:alpine
