--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20-alpine AS build
 WORKDIR /app
-COPY package.json tsconfig.json vite.config.ts ./
+COPY package.json tsconfig.json vite.config.ts index.html ./
 RUN npm install
 COPY public ./public
 COPY src ./src
