--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.8",
+    "@mui/x-data-grid": "^8.6.0",
     "@mui/material": "^5.15.8",
     "axios": "^1.6.8",
     "react": "^18.2.0",
