--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@mui/material": "^5.15.8",
     "@mui/x-data-grid": "^8.6.0",
     "axios": "^1.6.8",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
     "recharts": "^2.8.0"
   },
